	* arch/arm/src/Makefile, arch/x86/src/Makefile, arch/avr/src/Makefile,
	  arch/mips/src/Makefile, arch/sim/src/Makefile, arch/hc/src/Makefile,
	  arch/sh/src/Makefile:  The libgcc.a in newer versions of GCC now
	  have an dependency on an external implementation of abort().  This
	  required modification to the Makefiles that do the final link:  Now
	  libgcc.a must be included within the group of libraries that are
	  search recursively.
	* arch/arm/srm/stm32/stm32_otgfsdev.c:  A USB OTG FS device-side driver
	  for the STM32 F4 (and maybe F2 and F1 connectivity line).
	* tools/cmpconfig.c:  A tool for comparing two configuration files.
	* include/nuttx/usb/usbdev.h, drivers/usbdev/*, arch/*/src/*/*usb*.c:
	  Extend the USB device side interface so that EP0 OUT data can be passed
	  with OUT SETUP requests.
	* include/nuttx/watchdog.h:  Add the definition of a standard watchdog
	  driver interface.
	* drivers/watchdog.c:  The "upper half" watchdog timer driver.

6.18 2012-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* Kconfig:  Continued Kconfig file updates (no longer tracking on a per-file
	  basis in the ChangeLog)
	* arch/arm/src/stm32/stm32_iwdog.c and stm32_wwdog.c:  Add the STM32 IWDG
	  and WWDIG watchdog timer driver.
	* configs/stm3240g-eval/src/up_lcd.c: Add LCD from for the STM3240G-EVAL (the
	  initial check-in is just a stm3210e-eval driver with renaming).
	* sched/sched_setscheduler.c:  Correct successful return value (Contributed
	  by Richard Cochran).
	* include/fcntl.h and lib/stdio:  Ignore CONFIG_STDIO_LINEBUFFER is the
	  file was opened in binary mode.
	* lib/stdio/lib_fopen.c:  Correct an error in parsing open mode string.  The
	  plus sign may not appear right after the basic mode.  For example, "r+", "rb+",
	  and "r+b" are all value open strings and mean the same thing.
	* lib/stdio/lib_fopen.c:  Correct return errno value from f_open() and
	  f_fdopen() if the open mode string is invalid.
